[package]
name = "lattice-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "core",
    "crypto",
    "model",
    "wallet",
    "rlp",
    "abi",
]

[workspace.dependencies]
core = { version = "0.1.0", path = "core", default-features = false }
crypto = { version = "" }

thiserror = "1.0"