[package]
name = "lattice-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["core", "crypto", "model", "wallet", "lattice", "abi", "cli"]

[workspace.dependencies]
core = { version = "0.1.0", path = "core", default-features = false }
crypto = { version = "0.5.1" }

thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
bytes = "1.4"
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
