[package]
name = "abi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
alloy-primitives = "0.7.6"
alloy-dyn-abi = "0.7.6"
alloy-json-abi = "0.7.6"
serde_json = "1.0.117"
regex = "1.10.5"
