[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
model = { path = "../model" }
num-bigint = { workspace = true }
once_cell = { workspace = true }
libsm = { workspace = true }
secp256k1 = { workspace = true }
rand = { workspace = true }
sha256 = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
aes = { workspace = true }
serde = { workspace = true }
rlp = { workspace = true }
