[package]
name = "lattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
async-trait = "0.1.80"
tokio = { version = "1.38.0", features = ["full"] }
reqwest = "0.12.4"