[package]
name = "lattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
crypto = { path = "../crypto" }
wallet = { path = "../wallet" }
abi = { path = "../abi" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
async-trait = "0.1.80"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = "0.22.0"
futures-util = "0.3.30"
reqwest = "0.12.4"