[package]
name = "lattice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
crypto = { path = "../crypto" }
wallet = { path = "../wallet" }
abi = { path = "../abi" }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
moka = { workspace = true }
log = { workspace = true }
