[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
thiserror = "1.0.61"
num-bigint = "0.4.5"
hex = "0.4.3"
bs58 = "0.5.1"
sha256 = "1.5.0"
reqwest = "0.12.4"