[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
num-bigint = { workspace = true }
hex = { workspace = true }
bs58 = { workspace = true }
sha256 = { workspace = true }
reqwest = { workspace = true }