[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
crypto = { path = "../crypto" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }
rand = "0.8.5"
hex = "0.4.3"
scrypt = "0.11.0"
