[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
crypto = { path = "../crypto" }
mnemonic = { path = "../mnemonic" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v4"] }
rand = "0.8.5"
hex = "0.4.3"
scrypt = "0.11.0"
sha2 = "0.10.8"
hmac = "0.12.1"
memzero = "0.1.0"
secp256k1 = { version = "0.29.0", features = ["recovery", "rand"] }
libsm = "0.6.0"
num-bigint = "0.4.5"
bs58 = "0.5.1"
