[package]
name = "wallet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = { path = "../model" }
crypto = { path = "../crypto" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
scrypt = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
memzero = { workspace = true }
secp256k1 = { workspace = true }
num-bigint = { workspace = true }
bip39 = { workspace = true }
